update facility page

--- a/facilities.html
+++ b/facilities.html
@@ -377,50 +377,42 @@
           { top: "37%", left: "4%", name: "Room 224", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "9.5%", name: "Room 222", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "14.5%", name: "Room 220", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "23%", name: "Room 218", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "37%", left: "27.6%", name: "Room 219", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "32.5%", name: "Room 216", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Suite",
-            "Room Rate: Php2,700.00/Day"
+            "Room Details: Regular Suite"
             ] },
           { top: "37%", left: "37%", name: "Room 214", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Suite",
-            "Room Rate: Php2,700.00/Day"
+            "Room Details: Regular Suite"
             ] },
           { top: "37%", left: "41.5%", name: "Room 211", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "53%", name: "EDP/IT", images: [
             "src/img/facility/it_1.avif",
@@ -440,88 +432,74 @@
             { top: "62%", left: "66%", name: "Recovery Room", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "62%", left: "83%", name: "Operating Room", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "56%", left: "4%", name: "Room 225", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "9.5%", name: "Room 223", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "14.5%", name: "Room 221", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Suite",
-            "Room Rate: Php2,700.00/Day"
+            "Room Details: Regular Suite"
             ] },
           { top: "56%", left: "23%", name: "Room 219", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "56%", left: "27.6%", name: "Room 217", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "32.5%", name: "Room 215", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "37%", name: "Room 212", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "41.5%", name: "Room 210", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2,200.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "46%", name: "Room 208", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Suite",
-            "Room Rate: Php2,700.00/Day"
+            "Room Details: Regular Suite"
             ] },
             { top: "53%", left: "50.3%", name: "Nurse Station 2", images: [
             "src/img/facility/ns2.avif",
             "src/img/facility/ns2_2.avif",
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "63%", left: "51%", name: "Nursing Service Office", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "77%", left: "10%", name: "Heart Station", images: [
             "src/img/facility/heart_station-1.avif",
             "src/img/facility/heart_station-2.avif",
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "77%", left: "23%", name: "Phaeco Room 227", images: [
             "src/img/facility/or.avif"
@@ -584,56 +562,47 @@
           { top: "37%", left: "4%", name: "Room 224", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "9.5%", name: "Room 222", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "14.5%", name: "Room 220", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "23%", name: "Room 218", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "37%", left: "27.6%", name: "Isolation Room", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "32.5%", name: "Room 216", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "37%", name: "Room 214", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "41.5%", name: "Room 211", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "46%", name: "Room 209", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "37%", left: "53%", name: "EDP/IT", images: [
             "src/img/facility/or.avif"
@@ -642,92 +611,77 @@
           { top: "44%", left: "62%", name: "Lithotripsy", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "44%", left: "75%", name: "NICU", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "62%", left: "66%", name: "Recovery Room", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "62%", left: "83%", name: "Operating Room", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "56%", left: "4%", name: "Room 225", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "9.5%", name: "Room 223", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "14.5%", name: "Room 221", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "23%", name: "Room 219", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "56%", left: "27.6%", name: "Room 217", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "32.5%", name: "Room 215", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "37%", name: "Room 212", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "41.5%", name: "Room 210", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "56%", left: "46%", name: "Room 208", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "61%", left: "51%", name: "Nurse Station 3", images: [
             "src/img/facility/ns3.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "77%", left: "10%", name: "Room 335", images: [
             "src/img/facility/presidential.avif"
           ], descriptions: [
-            "Room Details: Presidential Room",
-            "Room Rate: Php4000.00/Day"
+            "Room Details: Presidential Room"
             ] },
             { top: "77%", left: "17.5%", name: "Nurse Station 3 Annex", images: [
             "src/img/facility/ns3_annex.avif"
@@ -737,57 +691,48 @@
             { top: "77%", left: "23%", name: "Room 336", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "77%", left: "27.6%", name: "Room 337", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "77%", left: "32.5%", name: "Room 338", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
           { top: "77%", left: "37%", name: "Room 339", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
 
             { top: "80.5%", left: "68%", name: "Room 205", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "80.5%", left: "73%", name: "Room 204", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "80.5%", left: "77.5%", name: "Room 203", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "80.5%", left: "82.5%", name: "Room 202", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
             { top: "80.5%", left: "87%", name: "Room 201", images: [
             "src/img/facility/or.avif"
           ], descriptions: [
-            "Room Details: Regular Private",
-            "Room Rate: Php2000.00/Day"
+            "Room Details: Regular Private"
             ] },
 
         ] },
