--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
+            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
             <a href="#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
@@ -278,7 +278,7 @@
     <!-- Buttons -->
     <div class="flex flex-col justify-center xl:justify-start md:flex-row gap-4 mt-6 items-center lg:items-start">
       <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
-      <a href="/services" class="block w-[14rem] text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Learn more</a>
+      <a href="/services" aria-label="services" class="block w-[14rem] text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Services Offered</a>
     </div>
 
     <!-- Left Dotted Pattern -->
@@ -716,7 +716,7 @@
         Meet our dedicated team of specialists providing exceptional care.
       </p>
       <!-- Doctors Grid -->
-      <div class="mt-12 grid gap-8 sm:grid-cols-2 lg:grid-cols-4">
+      <div class="mt-12 grid gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         <!-- Doctor Card Template -->
         
         <!-- Doctor 8 -->
@@ -1073,7 +1073,7 @@
   From new medical services and health tips to upcoming events, we keep you connected to what's happening in our community.
 </p>
 
-    <div class="grid md:grid-cols-3 gap-8">
+    <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-8">
       <!-- News Card -->
       <div class="bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-2xl transition" data-aos="fade-up" data-aos-delay="100">
         <img src="src/img/news/2025/wso-angels/WSO_Social Media Template-Diamond.avif" alt="News 1" fetchpriority="low" loading="lazy" class="w-full h-56 object-cover">
@@ -1197,7 +1197,7 @@
       We are currently looking for passionate and skilled individuals for the following positions:
     </p>
 
-    <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3" data-aos="fade-up" data-aos-delay="300">
+    <div class="grid gap-8 sm:grid-cols-2 md:grid-cols-3" data-aos="fade-up" data-aos-delay="300">
       <!-- Job Card -->
       <div class="bg-white shadow-md rounded-lg p-6 hover:shadow-lg transition">
         <h3 class="text-xl font-semibold text-green-700">Registered Nurse</h3>
