--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -208,7 +208,7 @@
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="xl:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
+            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
             <a href="index.html#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
@@ -221,7 +221,7 @@
   <div id="pdf-content" class="relative max-w-4xl mx-auto bg-white shadow-lg border border-gray-300 mt-40 mb-10 p-12 overflow-hidden">
     <!-- Letterhead with Logo -->
     <div class="flex flex-col items-center mb-6">
-      <img src="src/img/logo/mvh_logo_optimized.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
+      <img src="src/img/logo/mvh_logo_optimized.avif" fetchpriority="auto" loading="eager" alt="Metro Vigan Hospital Logo" class="h-20 mb-2">
       <h2 class="text-lg font-semibold text-gray-700">Metro Vigan Hospital</h2>
       <p class="text-sm text-gray-600">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</p>
     </div>
