--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://www.google.com/recaptcha/api.js?render=6LdVjZ8rAAAAAMTpN-pXZT9SoR2JHcmCUFNDwv2W"></script>
@@ -1546,7 +1545,7 @@
       <!-- Logo & About -->
       <div>
         <div class="flex items-center space-x-3">
-          <img src="src/img/logo/mvh_logo_optimized.avif" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
+          <img src="src/img/logo/mvh_logo_optimized.avif" loading="lazy" fetchpriority="low" alt="Metro Vigan Hospital Logo" class="h-12 w-auto">
           <span class="text-lg font-semibold">Metro Vigan Hospital</span>
         </div>
         <p class="mt-4 text-gray-600 text-sm leading-relaxed">
