--- a/about-us.html
+++ b/about-us.html
@@ -422,7 +422,7 @@
       </section>
 
       <section class="flex items-center justify-center gap-4 mt-8">
-        <img src="src/img/certifications/iso.avif" alt="ISO Certified Logo" class="h-16">
+        <img src="src/img/certifications/iso.avif" fetchpriority="low" loading="lazy" alt="ISO Certified Logo" class="h-16">
         <p class="text-lg font-bold uppercase tracking-wide">ISO 9001:2015 CERTIFIED</p>
       </section>
   
@@ -532,7 +532,7 @@
     <!-- Bottom Bar -->
     <div class="border-t border-gray-200 mt-8">
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
-        <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="src/img/logo/xtianbar-logo.avif" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
+        <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="src/img/logo/xtianbar-logo.avif" fetchpriority="low" loading="lazy" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
           <a href="/privacy-policy" class="hover:text-green-600 transition">Privacy Policy</a>
