--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
     <!-- Buttons -->
     <div class="flex flex-col justify-center xl:justify-start md:flex-row gap-4 mt-6 items-center lg:items-start">
-      <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
+      <a href="labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
       <a href="/services" aria-label="services" class="block w-[14rem] text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Services Offered</a>
     </div>
 
