update lab results link

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
+            <a href="http://labresult.metroviganhospital.com/" target="_blank" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
             <a href="#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
@@ -275,7 +275,7 @@
 
     <!-- Buttons -->
     <div class="flex flex-col justify-center xl:justify-start md:flex-row gap-4 mt-6 items-center lg:items-start">
-      <a href="labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
+      <a href="http://labresult.metroviganhospital.com/" target="_blank" class="block w-[14rem] text-center text-white rounded-md hover:bg-[#16a94c] bg-[#04813b] px-6 py-2">View Lab Results</a>
       <a href="/services" aria-label="services" class="block w-[14rem] text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Services Offered</a>
     </div>
 
