--- a/doctors.html
+++ b/doctors.html
@@ -154,7 +154,7 @@
 </h2>
 
   <!-- FILTER & SEARCH -->
-  <section class="max-w-7xl mx-auto px-6 mt-8">
+  <section class="max-w-7xl mx-auto px-6 mt-8 mb-4">
     <div class="flex flex-col md:flex-row justify-between gap-4">
       <!-- Specialty Dropdown -->
       <select id="specialtyFilter" class="border border-gray-300 rounded p-2 w-full md:w-1/3" data-aos="fade-left" data-aos-delay="300">
@@ -162,12 +162,12 @@
       </select>
 
       <!-- Search Box -->
-      <input type="text" id="searchBox" placeholder="Search by name, disease, specialty, room..." class="border border-gray-300 rounded p-2 w-full md:w-2/3" data-aos="fade-left" data-aos-delay="400">
+      <input type="text" id="searchBox" placeholder="Search by name of doctor or specialty..." class="border border-gray-300 rounded p-2 w-full md:w-2/3" data-aos="fade-left" data-aos-delay="400">
     </div>
   </section>
 
   <!-- DOCTORS GRID -->
-  <section class="max-w-7xl mx-auto px-6 mt-8" data-aos="fade-up" data-aos-delay="500">
+  <section class="max-w-7xl mx-auto px-6 mt-12" data-aos="fade-up" data-aos-delay="500">
     <div id="doctorsGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div>
     <div class="text-center mt-6">
       <button id="loadMore" class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg">Load More</button>
@@ -181,9 +181,10 @@
       <img id="modalImage" src="" alt="" class="w-32 h-32 rounded-full mx-auto mb-4">
       <h2 id="modalName" class="text-xl font-semibold text-center"></h2>
       <p id="modalSpecialty" class="text-green-600 font-medium text-center"></p>
-      <p id="modalDiseases" class="mt-2 text-sm text-gray-600 text-center"></p>
       <p id="modalRoom" class="mt-3 font-semibold text-center"></p>
       <p id="modalSchedule" class="text-sm text-gray-700 text-center"></p>
+
+      <p id="modalHmo" class="mt-3 mb-4 text-sm text-gray-700 text-center font-semibold font-lg"></p>
     </div>
   </div>
 
